# devgrace

./: Cargo.toml  README.md
src/: detector.rs  main.rs
src/adapters/: amp.rs  claude.rs  cline.rs  codex.rs  mod.rs  opencode.rs  pi.rs  zed.rs
